--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.androidproject">
+    package="com.example.androidproject" >
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -21,7 +21,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/app_icon_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidProject">
+        android:theme="@style/Theme.AndroidProject" >
+
+        <activity
+            android:name=".Chat.GroupChatActivity"
+            android:label="@string/title_activity_group_chat"
+            android:theme="@style/Theme.AndroidProject.NoActionBar" />
+        <activity android:name=".Chat.CreateGroupActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".policy"></activity>
         <activity android:name=".Users.ResetPasswordActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
@@ -47,7 +54,7 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".Login.LoginActivity"
-            android:theme="@style/Theme.AndroidProject.NoActionBar">
+            android:theme="@style/Theme.AndroidProject.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -71,7 +78,7 @@
         <service
             android:name=".DB.FirebaseIDHelper"
             android:enabled="true"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
@@ -97,7 +104,7 @@
         <service
             android:name=".Chat.NotifFirebasMessaging"
             android:enabled="true"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
