--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,12 +23,11 @@
         android:theme="@style/Theme.AndroidProject">
 
         <activity android:name=".Users.ResetPasswordActivity"></activity>
-        <activity android:name=".Map.Facebook" />
+        <activity android:name=".Map.Facebook" /><![CDATA[
 
-        <activity android:name=".FriendRequestActivity"></activity>
+        android:theme="@style/Theme.AndroidProject.NoActionBar" />
 
-            android:theme="@style/Theme.AndroidProject.NoActionBar" />
-
+        ]]>
         <activity android:name=".FrindsListActivity" />
         <activity android:name=".FindfriendActivity" />
         <activity android:name=".PersonProfileActivity" />
